infra/k8s/ingress/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: fieldops-observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: kube-prometheus-grafana
          port: 80
          namespace: fieldops-observability
