infra/k8s/ingress/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fieldops-api-gateway
  namespace: fieldops-auth
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    # ----------------------------------------------------------------------
    # Auth Service
    # ----------------------------------------------------------------------
    - match: PathPrefix(`/api/v1/auth`) || PathPrefix(`/api/docs`)
      kind: Rule
      middlewares:
        - name: rate-limit-auth
        - name: security-headers
        - name: compress
        - name: retry-auth
        - name: circuit-breaker-auth
      services:
        - name: auth-service
          port: 3001
