infra/k8s/ingress/jaeger-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jaeger-stripprefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /jaeger

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/jaeger`)
      kind: Rule
      middlewares:
        - name: jaeger-stripprefix
      services:
        - name: jaeger-query
          port: 16686
